--- a/Umbrella/Umbrella/Views/Shared/_Layout.cshtml
+++ b/Umbrella/Umbrella/Views/Shared/_Layout.cshtml
@@ -36,8 +36,11 @@
     </div>
     <footer class="border-top footer text-muted">
     </footer>
-    <script src="~/bundles/site.min.css" asp-append-version="true"></script>
+    <script src="~/bundles/site.min.js" asp-append-version="true"></script>
+    <script src="~/lib/axios/0.21.1/axios.js"></script>
+    <script src="~/lib/vue/2.6.14/vue.js"></script>
 
+    <script src="~/views/Home/index.js"></script>
     @*@RenderSection("Scripts", required: false)*@
 </body>
 </html>
